[package]
name = "bymax-live-auth"
version = "0.0.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Dogfood integration shape: the production consumer pattern (sessions, MFA, OAuth, platform)."

[dependencies]
# The full backend surface a real consumer (Bymax Live) assembles.
bymax-auth-axum = { workspace = true, features = ["full"] }
bymax-auth-core = { workspace = true, features = ["testing", "full"] }
bymax-auth-redis = { workspace = true, features = ["mfa", "oauth", "platform"] }
bymax-auth-types = { workspace = true }
async-trait = "0.1"
axum = { workspace = true }
tokio = { workspace = true }
secrecy = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

[lints]
workspace = true
